<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/white"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/titleAbo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="@id/back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/login2"
        app:layout_constraintTop_toBottomOf="@id/titleAbo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginText"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstPassInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/pass"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/loginInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstPass"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secondPassInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/repPass"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/firstPassInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secondPass"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/nickname"
        app:layout_constraintTop_toBottomOf="@id/secondPassInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameText"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/genderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sex"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInput" />

    <RadioGroup
        android:id="@+id/genderRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/genderText">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/maleGen"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="16sp"
            app:rippleColor="@color/purple_500" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/femaleGen"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="16sp"
            app:rippleColor="@color/purple_500" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/otherGen"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="16sp"
            app:rippleColor="@color/purple_500" />
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationButt"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:letterSpacing="0.02"
        android:padding="12dp"
        android:text="@string/main_ques_registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_500"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderRadio" />

    <TextView
        android:id="@+id/privacyText"
        android:textSize="14sp"
        android:lineSpacingExtra="4dp"
        android:textColorLink="@color/purple_500"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/abdo"
        android:textColor="#757575"
        android:linksClickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrationButt" />

</androidx.constraintlayout.widget.ConstraintLayout>