<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoCyclistsImage"
        android:layout_width="378dp"
        android:layout_height="514dp"
        android:layout_marginTop="24dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_cyclists"
        app:layout_constraintBottom_toTopOf="@+id/aboutAppText"
        app:layout_constraintDimensionRatio="400:439"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85" />

    <TextView
        android:id="@+id/aboutAppText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/main_ab_app_string"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoCyclistsImage" />

    <TextView
        android:id="@+id/whoCreateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/main_who_create"
        android:textColor="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutAppText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationButton"
        android:layout_width="218dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/main_ques_registration"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_500"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whoCreateText"/>

    <TextView
        android:id="@+id/accountHaveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_have_account"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>